installation/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: checkbot-certs
  labels:
    app: checkbot
  name: checkbot
  namespace: checkbot
spec:
  selector:                  
    app: checkbot
  ports:
  - name: 4444-tcp
    port: 4444               
    protocol: TCP
    targetPort: 4444
