installation/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: checkbot
  name: checkbot
spec:
  port:
    targetPort: 4444-tcp
  tls:
    termination: reencrypt
  to:
    kind: Service
    name: checkbot
    weight: 100
  wildcardPolicy: None
